fix: slider border-radius on safari

--- a/src/components/Carousel/Carousel.module.scss
+++ b/src/components/Carousel/Carousel.module.scss
@@ -15,6 +15,7 @@
 .slider {
   @include reset-list;
   border-radius: 10px;
+  z-index: 0;
   & li {
     max-height: 450px;
   }
